exports[`Checkbox renders correctly 1`] = `
<div
  className="checkbox">
  <label>
    <input
      checked={true}
      type="checkbox" />
     
    Do the thing?
  </label>
</div>
`;

exports[`File renders correctly 1`] = `
<div
  className="form-group">
  <label>
    Select files
  </label>
  <input
    className="form-control"
    multiple={true}
    name="files"
    placeholder="Select files"
    type="file"
    value={undefined} />
</div>
`;

exports[`Group renders correctly 1`] = `
<div
  className="form-group" />
`;

exports[`Input renders correctly 1`] = `
<input
  className="form-control"
  name="someInput"
  placeholder="Enter Text"
  value="" />
`;

exports[`Number renders correctly 1`] = `
<div
  className="form-group">
  <input
    className="form-control"
    name="someNumber"
    placeholder="Enter Number"
    type="number"
    value={12345} />
</div>
`;

exports[`Select renders correctly 1`] = `
<div
  className="form-group">
  <label>
    Select an option
  </label>
  <select
    className="form-control"
    label="Select an option"
    value="">
    <option
      value="1">
      1
    </option>
    <option
      value="2">
      2
    </option>
  </select>
</div>
`;

exports[`SelectMultiple renders correctly 1`] = `
<div
  className="form-group">
  <label>
    Select multiple options
  </label>
  <select
    className="form-control"
    label="Select multiple options"
    multiple={true}
    value="">
    <option
      value="1">
      1
    </option>
    <option
      value="2">
      2
    </option>
  </select>
</div>
`;

exports[`Text renders correctly 1`] = `
<div
  className="form-group">
  <label>
    Enter text
  </label>
  <input
    className="form-control"
    name="someText"
    placeholder="Enter text"
    type="text"
    value="blah" />
</div>
`;
